# uav_traj_ros2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/uav_traj_ros2/lib/uav_traj_ros2/: fw_mpc_node.py  global_planner_node  main_node  sas_main  waypoint_viz.py
install/uav_traj_ros2/share/ament_index/resource_index/package_run_dependencies/: uav_traj_ros2
install/uav_traj_ros2/share/ament_index/resource_index/parent_prefix_path/: uav_traj_ros2
install/uav_traj_ros2/share/uav_traj_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_traj_ros2/share/uav_traj_ros2/cmake/: uav_traj_ros2Config-version.cmake  uav_traj_ros2Config.cmake
install/uav_traj_ros2/share/uav_traj_ros2/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
log/: latest_build
uav_traj_ros2/: CMakeLists.txt  package.xml
uav_traj_ros2/docs/: to_do.md
uav_traj_ros2/include/: Astar.h  GlobalPlanner.h  GridMap.h  PositionVector.h
uav_traj_ros2/scripts/: fw_lin_mpc.py  fw_mpc_node.py  global_planner_node.cpp  main_sas.cpp  use_library.cpp  waypoint_viz.py
uav_traj_ros2/src/: Astar.cpp  GlobalPlanner.cpp  GridMap.cpp  PositionVector.cpp  global_planner_service.cpp  publisher_library.cpp
uav_traj_ros2/uav_traj_ros2/: Config.py  MPC.py  quaternion_tools.py
uav_traj_ros2/uav_traj_ros2/CasadiModels/: AirplaneModel.py
uav_traj_ros2/uav_traj_ros2/aircraft_data/: A_full.pkl  B_full.pkl  SIM_Plane_h_vals.csv
uav_traj_ros2/uav_traj_ros2/src/: Utils.py
uav_traj_ros2/uav_traj_ros2/src/aircraft/: Aircraft.py  AircraftDynamics.py  readme.md
uav_traj_ros2/uav_traj_ros2/src/config/: Config.py
uav_traj_ros2/uav_traj_ros2/src/derivative_info/: example.txt
uav_traj_ros2/uav_traj_ros2/src/math_lib/: VectorOperations.py
uav_traj_ros2/uav_traj_ros2/src/mpc/: FixedWingMPC.py  MPC.py
